multiple-projects.yml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: a1
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
    env: test
spec: {}
status: {}

---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: a2
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
    env: test
spec: {}
status: {}

---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: a3
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
    env: test
spec: {}
status: {}
