project4-udn.yml
apiVersion: v1
kind: Namespace
metadata:
  name: project4
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
