project6-udns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: project6
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
spec: {}
status: {}
