bad-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bad-pod
  name: bad-pod
spec:
  serviceAccountName: philip
  containers:
  - image: docker.io/library/httpd:latest
    name: bad-pod
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
