command-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: command-app
  name: command-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: command-app
    spec:
      containers:
      - image: registry.access.redhat.com/ubi9/httpd-24:9.7
        name: httpd-24
        ports:
        - containerPort: 8080
        resources: {}
status: {}
# oc create deployment command-app --image registry.access.redhat.com/ubi9/httpd-24:9.7 --port 8080 --dry-run=client -o yaml > command-app.yml
