complex-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: jad-complex
spec:
  containers:
    - name: web
      image: registry.access.redhat.com/ubi9/httpd-24:9.7
      ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443

    - name: db
      image: registry.fedoraproject.org/f32/mysql
      ports:
        - containerPort: 3306
