daemonset-app.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: null
  labels:
    app: daemon-app
  name: daemon-app
spec:
  selector:
    matchLabels:
      app: daemon-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: daemon-app
    spec:
      containers:
      - image: registry.access.redhat.com/ubi9/httpd-24:9.7
        name: httpd-24
        ports:
        - containerPort: 8080
        resources: {}
status: {}
