good-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: good-pod
  name: good-pod
spec:
  containers:
  - image: registry.access.redhat.com/ubi9/httpd-24:9.7
    name: good-pod
    ports:
    - containerPort: 8080
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
