simple-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: jay-pod
  # namespace: CURRENT
  labels:
    app: web
spec:
  containers:
    - name: web
      image: registry.access.redhat.com/ubi9/httpd-24:9.7
      ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443

# status:
