dev-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  labels:
    app: dev
spec:
  ## ReplicaSet ##
  replicas: 2
  selector:
    matchLabels:
      app: dev
  ## Pod Format ##
  template:
    metadata:
      name: jay-pod
      labels:
        app: dev
    spec:
      containers:
        - name: web
          image: registry.access.redhat.com/ubi9/httpd-24:9.7
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dev
  name: dev-app
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: dev

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: dev
  name: dev-app
spec:
  port:
    targetPort: http
  to:
    kind: ""
    name: dev-app
    weight: null
status: {}

# oc expose deployment dev-app --dry-run=client -o yaml
# oc expose service/dev-app --dry-run=client -o yaml
