allow-few.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-few
  namespace: project1
spec:
  podSelector:
    matchLabels:
      deployment: app1
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            you: me
        podSelector:
          matchLabels:
            deployment: app2
      ports:
      - port: 8080
        protocol: TCP
